--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,34 +9,36 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
-        android:networkSecurityConfig="@xml/network_security"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Toolbox"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
         <activity
-            android:windowSoftInputMode="adjustResize"
-            android:name="com.app.toolbox.MainActivity"
-            android:exported="true">
+            android:name=".fragment.timer.TimerAlertActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service
-            android:name="com.app.toolbox.fragment.stopwatch.TimerService"
-            android:foregroundServiceType="dataSync"
-            android:exported="false" />
-        <service android:name="com.app.toolbox.fragment.stopwatch.BroadcastSenderService" android:exported="false" />
+        <service android:name=".fragment.timer.TimerService" android:exported="false" android:foregroundServiceType="dataSync" />
+        <service android:name=".fragment.stopwatch.StopwatchService" android:exported="false" android:foregroundServiceType="dataSync" />
+        <service android:name=".fragment.stopwatch.BroadcastSenderService" android:exported="false" />
 
-        <receiver android:name="com.app.toolbox.fragment.timer.StopTimerReceiver" android:exported="false"/>
+        <receiver android:name=".fragment.timer.StopTimerReceiver" android:exported="false" />
     </application>
+
 </manifest>
