Fixed timer issues, changed page changing logic(it uses intents now), Removed TimerAlertActivity and updated strings.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-        <activity
-            android:name=".fragment.timer.TimerAlertActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".fragment.timer.TimerAlertActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".MainActivity"
             android:exported="true"
