--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ plugins {
 
 android {
     namespace 'com.app.toolbox'
-    compileSdk 35
+    compileSdk = 36
 
     defaultConfig {
         applicationId "com.app.toolbox"
-        minSdk 30 // 25
-        targetSdk 35
+        minSdk 35 // 25 // 30
+        targetSdk 36
         versionCode 6
-        versionName "6.2"
+        versionName "6.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,8 +30,8 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.viewpager2:viewpager2:1.0.0' // view pager
-    implementation 'com.google.android.material:material:1.11.0' // tab layout
+    implementation libs.viewpager2 // view pager
+    implementation libs.material.v1130 // tab layout
 
 //    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
 //    implementation 'androidx.camera:camera-core:1.1.0'
@@ -39,14 +39,14 @@ dependencies {
 //    implementation 'androidx.camera:camera-lifecycle:1.1.0'
 //    implementation 'androidx.camera:camera-view:1.0.0-alpha31'
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.fragment:fragment:1.6.2'
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation libs.appcompat.v161
+    implementation libs.fragment
+    implementation libs.google.material.v1110
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
-    implementation 'com.faendir.rhino:rhino-android:1.5.2'
+    implementation libs.rhino.android
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
