--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 35 // 25 // 30
         targetSdk 36
         versionCode 6
-        versionName "6.3"
+        versionName "6.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,15 +30,8 @@ android {
 }
 
 dependencies {
-    implementation libs.viewpager2 // view pager
-    implementation libs.material.v1130 // tab layout
-
-//    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
-//    implementation 'androidx.camera:camera-core:1.1.0'
-//    implementation 'androidx.camera:camera-camera2:1.1.0'
-//    implementation 'androidx.camera:camera-lifecycle:1.1.0'
-//    implementation 'androidx.camera:camera-view:1.0.0-alpha31'
-
+    implementation libs.viewpager2
+    implementation libs.material.v1130
     implementation libs.appcompat.v161
     implementation libs.fragment
     implementation libs.google.material.v1110
@@ -50,4 +43,5 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation libs.ambilwarna
 }
