--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.12.3"
+ambilwarna = "2.0.1"
 appcompatVersion = "1.6.1"
 fragment = "1.8.9"
 googleMaterial = "1.11.0"
@@ -17,6 +18,7 @@ viewpager2 = "1.1.0"
 visionInterfaces = "16.3.0"
 
 [libraries]
+ambilwarna = { module = "com.github.yukuku:ambilwarna", version.ref = "ambilwarna" }
 appcompat-v161 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
 fragment = { module = "androidx.fragment:fragment", version.ref = "fragment" }
 google-material-v1110 = { module = "com.google.android.material:material", version.ref = "googleMaterial" }
