--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,23 +1,23 @@
 [versions]
 agp = "8.12.3"
 ambilwarna = "2.0.1"
-appcompatVersion = "1.6.1"
+appcompatVersion = "1.7.1"
 fragment = "1.8.9"
-googleMaterial = "1.11.0"
-googleMaterialVersion = "1.9.0"
+googleMaterial = "1.13.0"
+googleMaterialVersion = "1.13.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
 appcompat = "1.7.1"
-lintApi = "31.10.1"
-material = "1.12.0"
-activity = "1.10.1"
+#lintApi = "31.10.1"
+material = "1.13.0"
+activity = "1.12.4"
 constraintlayout = "2.2.1"
 material3 = "1.4.0"
 materialVersion = "1.13.0"
 rhinoAndroid = "1.6.0"
 viewpager2 = "1.1.0"
-visionInterfaces = "16.3.0"
+#visionInterfaces = "16.3.0"
 
 [libraries]
 ambilwarna = { module = "com.github.yukuku:ambilwarna", version.ref = "ambilwarna" }
@@ -28,8 +28,8 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-lint-api = { module = "com.android.tools.lint:lint-api", version.ref = "lintApi" }
-lint-checks = { module = "com.android.tools.lint:lint-checks", version.ref = "lintApi" }
+#lint-api = { module = "com.android.tools.lint:lint-api", version.ref = "lintApi" }
+#lint-checks = { module = "com.android.tools.lint:lint-checks", version.ref = "lintApi" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
@@ -38,7 +38,7 @@ material-v190 = { module = "com.google.android.material:material", version.ref =
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 rhino-android = { module = "com.faendir.rhino:rhino-android", version.ref = "rhinoAndroid" }
 viewpager2 = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager2" }
-vision-interfaces = { group = "com.google.mlkit", name = "vision-interfaces", version.ref = "visionInterfaces" }
+#vision-interfaces = { group = "com.google.mlkit", name = "vision-interfaces", version.ref = "visionInterfaces" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
